--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -32,3 +32,18 @@ mybatis:
   type-aliases-package: com.wxuy.example.entity
 #  configuration:
 #    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+#mybatis开启日志
+logging:
+  level:
+    com.wxuy.example.mapper.primary: DEBUG
+users:
+  userlist:
+    - age: 11
+      user_name: 小王
+      description: A
+    - age: 13
+      user_name: 小张
+      description: C
+    - age: 14
+      user_name: 小李
+      description: B
