--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,14 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.4.2</version>
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
         </plugins>
         <!-- 用于mybatis的xml文件在mapper目录下读取，因为 src/main/java 路径为source，默认不读取 resources(xml等配置文件)-->
         <resources>
