设计模式-结构模式-外观模式

--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,13 @@
             <artifactId>redisson</artifactId>
             <version>3.15.5</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-beanutils/commons-beanutils -->
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.8.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
